# SelfStudy

./: .gitignore  README.md
CMake/: Build.bat  CMakeLists.txt
CMake/Project1/: P1.cpp  P1.h
CMake/Project2/: P2.cpp  P2.h
CMake/tcs/: CMakeLists.txt  gtest_tc.cpp
Cuda/: Cuda.sln  README.md
Cuda/Cuda/: Cuda.vcxproj  File.cu  File1.cu  File2_AddVectors.cu  File3_JuliaSet_CPU.cu  File3_JuliaSet_GPU.cu  File4_Add_thread.cu  File5_Add_trheadNblock.cu  File6_Dot_SharedMemory.cu  File7_RayTracing.cu
Python/: Chapter1.ipynb  Chapter2_1.ipynb  Chapter2_2.ipynb  w3school_Python_2.ipynb
Python/.ipynb_checkpoints/: w3school_Python_1-checkpoint.ipynb  w3school_Python_2-checkpoint.ipynb
React/basics/: package-lock.json
React/basics/src/: index.js
gtest/: README.md
gtest/LearningGtest/: CMakeLists.txt  build.sh
gtest/LearningGtest/tests/: CMakelists.txt  hello_test.cc  world_test.cc
